--- a/api-gateway-service/src/main/resources/application.properties
+++ b/api-gateway-service/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+spring.application.name=api-gateway
+server.port=8765
 
+eureka.instance.prefer-ip-address=true
+eureka.instance.hostname=localhost
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+
+spring.cloud.gateway.discovery.locator.enabled=true
+spring.cloud.gateway.httpclient.wiretap=true
+spring.cloud.gateway.httpserver.wiretap=true
