--- a/api-gateway-service/src/main/resources/application.properties
+++ b/api-gateway-service/src/main/resources/application.properties
@@ -5,6 +5,10 @@ eureka.instance.prefer-ip-address=true
 eureka.instance.hostname=localhost
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 
-spring.cloud.gateway.discovery.locator.enabled=true
+# to make the URLs work via API Gateway Discovery
+# spring.cloud.gateway.discovery.locator.enabled=true
+# spring.cloud.gateway.discovery.locator.lower-case-service-id=true
 spring.cloud.gateway.httpclient.wiretap=true
 spring.cloud.gateway.httpserver.wiretap=true
+
+
