--- a/api-gateway-service/src/main/resources/application.properties
+++ b/api-gateway-service/src/main/resources/application.properties
@@ -8,6 +8,8 @@ eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 # to make the URLs work via API Gateway Discovery
 # spring.cloud.gateway.discovery.locator.enabled=true
 # spring.cloud.gateway.discovery.locator.lower-case-service-id=true
+
+# to see more information
 spring.cloud.gateway.httpclient.wiretap=true
 spring.cloud.gateway.httpserver.wiretap=true
 
