formatting and configurations

--- a/circuit-breaker-service/src/main/resources/application.properties
+++ b/circuit-breaker-service/src/main/resources/application.properties
@@ -58,8 +58,8 @@ resilience4j.ratelimiter.instances.default.limit-refresh-period=60s
 #2023-11-07T14:16:58.369+01:00  INFO 18852 --- [nio-8020-exec-3] c.s.r.c.CircuitBreakerController         : fallBackResponseForSampleAPI is returned.
 
 # Bulk Head configs
-resilience4j.bulkhead.instances.default.max-concurrent-calls=5
-resilience4j.bulkhead.instances.default.max-wait-duration=5s
+resilience4j.bulkhead.instances.bulkHeadApi.max-concurrent-calls=6
+resilience4j.bulkhead.instances.bulkHeadApi.max-wait-duration=2s
 
 # Output logs
 #2023-11-07T14:22:11.858+01:00  INFO 18852 --- [nio-8020-exec-8] c.s.r.c.CircuitBreakerController         :  *********** Bulk Head API is called.
